spin research interests into a new narrative

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -12,19 +12,17 @@ layout: layouts/layout
       Germany, where I work on natural language processing (NLP), i.e., getting computers to do things with human language.
     </p>
     <p>
-      My <a href="work/">research</a> is about measuring and improving the <b>robustness</b> of NLP systems, especially as applied to <b>question answering</b> and <b>fairness</b>.
-      I value interdisciplinarity and methodological pluralism, and I am interested in both the social and technical aspects of NLP. On the technical side, I'm drawn to approaches that are more efficient or informed by linguistics. On the social side, I like thinking about the gaps in how we as NLP practitioners define and operationalize concepts like 'robustness' and 'fairness', as well as the societal implications of these gaps.
+      My research is about both social and technical aspects of NLP. On the technical side, I study <b>conflicts between parametric knowledge and contextual reasoning</b>, i.e., when knowledge acquired by systems from training data and "embedded" in their parameters (like biases and memorized facts) is in conflict with contextual information. On the social side, I write about gaps and opportunities in how we <b>define and operationalize abstract concepts like 'robustness', 'bias', etc.</b>, as well the societal implications of these gaps. In both types of work, I value interdisciplinarity and methodological pluralism.
     </p>
     <p>
-      My philosophy on science is that it should do good in the world, for a definition of good that is power-aware at worst and counter-power at best.
-      Such science can only be done in collaboration with people outside the ivory tower. Science communication is also an integral part of the science I want to do, and I enjoy giving <a href="talks/">talks</a>, especially introductory ones.
+    When I'm not working or thinking about birds, I spend my time on hobbies both conventional (reading almost exclusively non-fiction, listening to metal, writing code or posts for my website) and unique (preserving bugs, etching glass, collecting skull graffiti).
     </p>
     <p>
-      You may have known me under a different name previously but
+      You may have known me under a different name but
       <a href="posts/2022-04-30-name/">I go by Vagrant now</a>.
-      Please use <a href="posts/2022-12-03-pronouns/#they%2Fthem">they/them</a> or
-      <a href="posts/2022-12-03-pronouns/#xe%2Fxem">xe/xem</a> pronouns to refer to me and
-      if you must use a title, use Mx (pronounced like "mix").
+      Please refer to me with <a href="posts/2022-12-03-pronouns/#they%2Fthem">they/them</a> or
+      <a href="posts/2022-12-03-pronouns/#xe%2Fxem">xe/xem</a> pronouns, and
+      use Mx (pronounced like "mix") if you absolutely must use a title.
       Press the play button to hear my name, or if you know the
       <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet"
         >IPA</a
@@ -33,6 +31,14 @@ layout: layouts/layout
         >/'ve&#618;.g&#633;&#600;nt.'ga&#650;.t&#652;m/</span
       >.
     </p>
+  </div>
+  <div class="col col-md-4 mx-auto">
+    <figure>
+      <img src="{{ '/static/img/vagrant.jpeg' }}"
+           alt="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera. They are wearing all-black clothes, a black leather jacket, and a leather choker with spikes. Their hand holds a mocktail in a wine glass."
+           title="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera. They are wearing all-black clothes, a black leather jacket, and a leather choker with spikes. Their hand holds a mocktail in a wine glass."
+      />
+    </figure>
     <section class="player">
       <audio class="custom-audio-player">
         <source
@@ -50,15 +56,6 @@ layout: layouts/layout
         <button class="playpause custom-audio-player">Play</button>
       </div>
     </section>
-    <br />
-  </div>
-  <div class="col col-md-4 mx-auto">
-    <figure>
-      <img src="{{ '/static/img/vagrant.jpeg' }}"
-           alt="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera. They are wearing all-black clothes, a black leather jacket, and a leather choker with spikes. Their hand holds a mocktail in a wine glass."
-           title="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera. They are wearing all-black clothes, a black leather jacket, and a leather choker with spikes. Their hand holds a mocktail in a wine glass."
-      />
-    </figure>
   </div>
 </div>
 {% set js %} {% include "static/js/audio_player.js" %} {% endset %}
