deprecate use of align in css

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -33,7 +33,7 @@ layout: layouts/layout
         >/'ve&#618;.g&#633;&#600;nt.'ga&#650;.t&#652;m/</span
       >.
     </p>
-    <section class="player">
+    <section class="player centred">
       <audio class="custom-audio-player">
         <source
           src="{{ '/static/audio/vagrant_gautam.wav' }}"
@@ -46,7 +46,7 @@ layout: layouts/layout
           instead.
         </p>
       </audio>
-      <div class="controls custom-audio-player" align="center">
+      <div class="controls custom-audio-player">
         <button class="playpause custom-audio-player">Play</button>
       </div>
     </section>
