--- a/templates/_includes/layouts/layout.njk
+++ b/templates/_includes/layouts/layout.njk
@@ -46,8 +46,12 @@
             <a class="nav-link" href="/posts">{{ "&#9758;" | safe if '/posts/' in page.url }}Blog</a>
         </nav>
     </header>
+    <hr width="100%"/>
     <main role="main" class="container" id="main">
-    <hr width="78%"/>
+    <header>
+        <h1>{{ title | escape }}</h1>
+        {% block additionalheadercontent %}{% endblock %}
+    </header>
     {% block body %}
       {{ content | safe }}
     {% endblock %}
