broaden research narrative

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -12,7 +12,10 @@ layout: layouts/layout
       Germany, where I work on natural language processing (NLP), i.e., getting computers to do things with human language.
     </p>
     <p>
-      My research is about both social and technical aspects of NLP. On the technical side, I study <b>conflicts between parametric knowledge and contextual reasoning</b>, i.e., when knowledge acquired by systems from training data and "embedded" in their parameters (like biases and memorized facts) is in conflict with contextual information. On the social side, I write about gaps and opportunities in how we <b>define and operationalize abstract concepts like 'robustness', 'bias', etc.</b>, as well the societal implications of these gaps. In both types of work, I value interdisciplinarity and methodological pluralism.
+      My research is about both <b>social and technical aspects of trustworthy NLP</b> – especially <b>fairness, reasoning and robustness</b>.
+      On the technical side, I propose methods for and evaluations of these aspects that are inspired by linguistics.
+      On the social side, I investigate gaps and opportunities in how we define and operationalize abstract concepts like 'robustness', 'bias', etc., as well their societal implications.
+      In both types of work, I value interdisciplinarity and methodological pluralism.
     </p>
     <p>
     When I'm not working or thinking about birds, I spend my time on hobbies both conventional (reading almost exclusively non-fiction, listening to metal, writing code or posts for my website) and unique (preserving bugs, etching glass, collecting skull graffiti).
@@ -23,13 +26,11 @@ layout: layouts/layout
       Please refer to me with <a href="posts/2022-12-03-pronouns/#they%2Fthem">they/them</a> or
       <a href="posts/2022-12-03-pronouns/#xe%2Fxem">xe/xem</a> pronouns, and
       use Mx (pronounced like "mix") if you absolutely must use a title.
-      Press the play button to hear my name, or if you know the
-      <a href="https://en.wikipedia.org/wiki/International_Phonetic_Alphabet"
-        >IPA</a
-      >, it is
+      My name is pronounced exactly like the English word, i.e.,
       <span class="ipa-pronunciation"
         >/'ve&#618;.g&#633;&#600;nt.'ga&#650;.t&#652;m/</span
       >.
+      Press the play button to hear it.
     </p>
   </div>
   <div class="col col-md-4 mx-auto">
