add HITS to bio

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -8,8 +8,8 @@ layout: layouts/layout
 <div class="row">
   <div class="col col-md-8 mx-auto">
     <p>
-      I'm a computer scientist, linguist and birder. I am currently a computer science PhD candidate at Saarland University in
-      Germany, where I work on natural language processing (NLP), i.e., getting computers to do things with human language.
+      I'm a computer scientist, linguist and birder, and I work on natural language processing (NLP), i.e., getting computers to do things with human language.
+      I am finishing a PhD in computer science at Saarland University in Germany, and I am the 2024 recipient of the Independent Postdoc Fellowship at the Heidelberg Institute for Theoretical Studies.
     </p>
     <p>
       My research is about both <b>social and technical aspects of trustworthy NLP</b> – especially <b>fairness, reasoning and robustness</b>.
