--- a/static/css/bootstrap-subset.css
+++ b/static/css/bootstrap-subset.css
@@ -9,6 +9,8 @@
   --blue-darker: #0051a8;
   --purple-lighter: #b38af9;
   --purple-darker: #474181;
+  --orange-lighter: #ffddb3;
+  --orange-darker: #611800;
   /* disallows scrolling up higher than the top of the page */
   overscroll-behavior-y: none;
 }
@@ -373,4 +375,106 @@ th {
   left: 2rem;
   /* position it over anything else that's underneath */
   z-index: 10;
+}
+
+.postlist {
+  list-style: none;
+  padding: 0;
+}
+.postlist-item {
+  line-height: 1.8;
+}
+.postlist-item:before {
+  content: "" attr(value) ". ";
+  display: inline-block;
+  pointer-events: none;
+  line-height: 100%;
+  text-align: right;
+}
+.postlist-date,
+.postlist-item:before {
+  font-size: 0.8125em; /* 13px /16 */
+}
+.postlist-date {
+  word-spacing: -0.5px;
+  margin-right: 0.6666666666667em; /* 8px /12 */
+}
+.postlist-link {
+  padding-left: 0.3em;
+  padding-right: 0.3em;
+  text-underline-position: from-font;
+  text-underline-offset: 0;
+  text-decoration-thickness: 1px;
+}
+.postlist-item-active .postlist-link {
+  font-weight: bold;
+}
+.container .postlist-link {
+  font-size: 1.1875em; /* 19px /16 */
+  font-weight: 700;
+  text-decoration: underline;
+}
+.postlist-item > .post-tag {
+  align-self: center;
+}
+.post-tag {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-size: 0.75em; /* 12px /16 */
+  padding: 0.08333333333333em 0.3333333333333em; /* 1px 4px /12 */
+  border-radius: 0.25em; /* 3px /12 */
+  text-decoration: none;
+}
+
+a[href].post-tag,
+a[href].post-tag:visited {
+  color: inherit;
+}
+
+.postlist-date,
+.postlist-item:before {
+  color: var(--lightgray);
+}
+.post-tag {
+  color: var(--lightgray);
+  border: 1px solid var(--gray);
+}
+a[href].post-tag:hover,
+a[href].post-tag:focus {
+  background-color: var(--darkgray);
+}
+a.postlist-link:visited {
+  color: var(--purple-lighter);
+}
+
+.highlight-author {
+  font-weight: bold;
+  color: var(--orange-lighter);
+}
+
+@media (prefers-color-scheme: light) {
+  .postlist-date,
+  .postlist-item:before {
+    color: var(--darkgray);
+  }
+  .post-tag {
+    color: var(--darkgray);
+    border: 1px solid var(--gray);
+  }
+  a[href].post-tag:hover,
+  a[href].post-tag:focus {
+    background-color: var(--lightgray);
+  }
+  a.postlist-link:visited {
+    color: var(--purple-darker);
+  }
+  .highlight-author {
+    color: var(--orange-darker);
+  }
+}
+
+.wide-spaced-list > li + li {
+  margin-top: 10px;
 }
