update vacation status

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -8,17 +8,14 @@ layout: layouts/layout
 <div class="row">
   <div class="col col-md-8 mx-auto">
     <p>
-      I'm a computer scientist, linguist and birder, and I work on natural language processing (NLP), i.e., getting computers to do things with human language.
-      I am finishing a PhD in computer science at Saarland University in Germany, and I am the 2024 recipient of the Independent Postdoc Fellowship at the Heidelberg Institute for Theoretical Studies.
+      I do research on <b>social and technical aspects of trustworthy natural language processing</b>.
+      In other words, I want to get computers to do things with human language <b>fairly</b> and <b>faithfully</b>.
+      Currently, however, I am on vacation celebrating the submission of my PhD thesis (in computer science, at Saarland University), before I start my Independent Postdoc Fellowship at the Heidelberg Institute for Theoretical Studies in September 2025.
     </p>
     <p>
-      My research is about both <b>social and technical aspects of trustworthy NLP</b> – especially <b>fairness, reasoning and robustness</b>.
-      On the technical side, I propose methods for and evaluations of these aspects that are inspired by linguistics.
-      On the social side, I investigate gaps and opportunities in how we define and operationalize abstract concepts like 'robustness', 'bias', etc., as well their societal implications.
+      The technical side of my research involves proposing methods and evaluations that are inspired by linguistics (e.g., for <em>pronominal reasoning</em> or <em>question answering</em>).
+      On the social side, I investigate gaps, opportunities, and societal implications related to how we define and operationalize abstract concepts in NLP (e.g., <em>democratization</em> or <em>gender</em>).
       In both types of work, I value interdisciplinarity and methodological pluralism.
-    </p>
-    <p>
-    When I'm not working or thinking about birds, I spend my time on hobbies both conventional (reading almost exclusively non-fiction, listening to metal, writing code or posts for my website) and unique (preserving bugs, etching glass, collecting skull graffiti).
     </p>
     <p>
       You may have known me under a different name but
@@ -29,7 +26,7 @@ layout: layouts/layout
       My name is pronounced exactly like the English word, i.e.,
       <span class="ipa-pronunciation"
         >/'ve&#618;.g&#633;&#600;nt.'ga&#650;.t&#652;m/</span
-      >.
+      >, because I love birds and birding.
       Press the play button to hear it.
     </p>
   </div>
