remove pointers to special post tags

--- a/templates/posts.njk
+++ b/templates/posts.njk
@@ -4,9 +4,7 @@ description: My blog archive
 layout: layouts/blog
 ---
 
-My best posts are probably under the
-<a href="{{ "/tags/autism" | url }}">autism</a> and
-<a href="{{ "/tags/gender" | url }}">gender</a> tags. I also have an <a href="{{ "/feed.xml" | url}}">RSS feed</a>.
+My tagging is unfortunately not very systematic. I have an <a href="{{ "/feed.xml" | url}}">RSS feed</a> if you want to keep up with my blog.
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
