remove vacation notice

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -10,7 +10,7 @@ layout: layouts/layout
     <p>
       I do research on <b>social and technical aspects of trustworthy natural language processing</b>.
       In other words, I want to get computers to do things with human language <b>fairly</b> and <b>faithfully</b>.
-      Currently, however, I am on vacation celebrating the submission of my PhD thesis (in computer science, at Saarland University), before I start my Independent Postdoc Fellowship at the Heidelberg Institute for Theoretical Studies in September 2025.
+      My work is currently supported by an Independent Postdoc Fellowship at the Heidelberg Institute for Theoretical Studies, before which I did a PhD in computer science at Saarland University.
     </p>
     <p>
       The technical side of my research involves proposing methods and evaluations that are inspired by linguistics (e.g., for <em>pronominal reasoning</em> or <em>question answering</em>).
