--- a/templates/index.njk
+++ b/templates/index.njk
@@ -33,8 +33,8 @@ layout: layouts/layout
   <div class="col col-md-4 mx-auto">
     <figure>
       <img src="{{ '/static/img/vagrant.jpeg' }}"
-           alt="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera. They are wearing all-black clothes, a black leather jacket, and a leather choker with spikes. Their hand holds a mocktail in a wine glass."
-           title="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera. They are wearing all-black clothes, a black leather jacket, and a leather choker with spikes. Their hand holds a mocktail in a wine glass."
+           alt="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera in front of a colourful wall of graffiti. They are wearing a similarly-coloured striped Mexican scarf, and steampunk sunglasses are perched on their head."
+           title="Vagrant, a brown-skinned person with short curly black hair, smiles at the camera in front of a colourful wall of graffiti. They are wearing a similarly-coloured striped Mexican scarf, and steampunk sunglasses are perched on their head."
       />
     </figure>
     <section class="player centred">
