change recommended title

--- a/templates/index.njk
+++ b/templates/index.njk
@@ -22,7 +22,7 @@ layout: layouts/layout
       <a href="posts/2022-04-30-name/">I go by Vagrant now</a>.
       Please refer to me with <a href="posts/2022-12-03-pronouns/#they%2Fthem">they/them</a> or
       <a href="posts/2022-12-03-pronouns/#xe%2Fxem">xe/xem</a> pronouns, and
-      use Mx (pronounced like "mix") if you absolutely must use a title.
+      use Dr. if you absolutely must use a title.
       My name is pronounced exactly like the English word, i.e.,
       <span class="ipa-pronunciation"
         >/'ve&#618;.g&#633;&#600;nt.'ga&#650;.t&#652;m/</span
